--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {font-family: Arial, Helvetica, sans-serif;
-    background-image: url("backview.jpg");
-    background-size: cover;}
+    }
 * {box-sizing: border-box;}
 
 input[type=text],[type=email], select, textarea {
@@ -52,14 +51,6 @@ opacity:.8;
 marging-right:16%;
 display:fixed;
 }
-nav li{
-font-size:20px;
-list-display-style:none;
-display: inline;
-padding:20px;
-text-position: right;
-
-}
 li a{
 display-style:none;
 color:black;
@@ -73,4 +64,85 @@ font-size:25px;
     padding-left: 35%;
     padding-top: 17%;
     font-size: 180%;
+}
+span{
+    padding-left: 644px;
+}
+		section{
+            background-color:blue;
+            width: 100%;
+            //background-color: #f1f1f1;
+            height: 700px;
+            background-image: url(mac.jpg);
+            background-size: cover;
+
+		}
+section h1{
+	padding-top: 234px;
+	color: white;
+	font-size: 54px;
+	float: center;
+}
+section p{
+	color: white;
+	font-size: 34px;
+}
+		footer{
+			 background-color: grey;
+             text-align: center;
+             color: honeydew;
+             position: fixed;
+             bottom: 0; 
+             width: 100%;
+		}
+/*top navigation */
+        .topnav {
+  padding: 0;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: deepskyblue;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+ .topnav a:not(:first-child) {float: right;}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 }
