--- a/style.css
+++ b/style.css
@@ -1,9 +1,6 @@
 body {font-family: Arial, Helvetica, sans-serif;
     }
 * {box-sizing: border-box;}
-
-
-
 input[type=submit] {
 background-color: #212e22;
 color: white;
@@ -20,15 +17,12 @@ background-color: #4e71d3;
 
 nav{
 text-align:right;
-//background-color:skyblue;
-height:40px;
+background-color:skyblue;
+height:380px;
 padding:0;
-opacity:.8;
-marging-right:16%;
-display:fixed;
+position: relative;
 }
 li a{
-display-style:none;
 color:black;
 text-decoration: none;
 }
@@ -36,30 +30,26 @@ li a:hover {
 color: rgb(15, 15, 44);
 font-size:25px;
 }
-#home{
-    padding-left: 35%;
-    padding-top: 17%;
-    font-size: 180%;
-}
 span{
     padding-left: 644px;
 }
-		section{
-            background-color:blue;
+		main{
+      background-image: url(mac.jpg);
+      background-size: cover;
+            margin-top: 0em;
+            padding-top: 0em;
             width: 100%;
-            //background-color: #f1f1f1;
             height: 700px;
-            background-image: url(mac.jpg);
-            background-size: cover;
+
 
 		}
-section h1{
-	padding-top: 234px;
+main h1{
+	padding-top: 204px;
 	color: white;
 	font-size: 54px;
 	float: center;
 }
-section p{
+main p{
 	color: white;
 	font-size: 34px;
 }
@@ -77,8 +67,8 @@ section p{
 }
 
 .container {
-  width: 50%;
-  Margin-left: 23%;
+  width: 60%;
+  margin-right: 0px;
   border-radius: 5px;
   background-color: #f2f2f2;
   padding: 20px;
@@ -97,3 +87,16 @@ section p{
     margin-bottom: 16px;
     resize: vertical;
     }
+ .social{
+  width: 38%; 
+  height: 373px;
+  padding-top: 23px;
+  padding-right: 34px;
+
+ }   
+ .social label{
+  padding-top: 54px;
+}
+.social label a{
+  font-size: 22px;
+}
