--- a/style.css
+++ b/style.css
@@ -1,18 +1,6 @@
 body {font-family: Arial, Helvetica, sans-serif;
     }
 * {box-sizing: border-box;}
-
-input[type=text],[type=email], select, textarea {
-width: 100%;
-padding: 12px;
-border: 1px solid #ccc;
-border-radius: 4px;
-box-sizing: border-box;
-margin-top: 6px;
-margin-bottom: 16px;
-resize: vertical;
-}
-
 input[type=submit] {
 background-color: #212e22;
 color: white;
@@ -26,33 +14,15 @@ input[type=submit]:hover {
 background-color: #4e71d3;
 }
 
-.container {
-width: 50%;
-Margin-left: 23%;
-border-radius: 5px;
-background-color: #f2f2f2;
-padding: 20px;
-}
-h3{
- text-align: center;
-}
-footer{
- background-color: grey;
- text-align: center;
- color: honeydew;
- position: fixed; bottom: 0; width: 100%;
-}
+
 nav{
 text-align:right;
-//background-color:skyblue;
-height:40px;
+background-color:skyblue;
+height:380px;
 padding:0;
-opacity:.8;
-marging-right:16%;
-display:fixed;
+position: relative;
 }
 li a{
-display-style:none;
 color:black;
 text-decoration: none;
 }
@@ -60,30 +30,29 @@ li a:hover {
 color: rgb(15, 15, 44);
 font-size:25px;
 }
-#home{
-    padding-left: 35%;
-    padding-top: 17%;
-    font-size: 180%;
-}
 span{
     padding-left: 644px;
 }
-		section{
-            background-color:blue;
+  
+
+
+main{
+      background-image: url(mac.jpg);
+      background-size: cover;
+            margin-top: 0em;
+            padding-top: 0em;
             width: 100%;
-            //background-color: #f1f1f1;
             height: 700px;
-            background-image: url(mac.jpg);
-            background-size: cover;
+
 
 		}
-section h1{
-	padding-top: 234px;
+main h1{
+	padding-top: 173px;
 	color: white;
 	font-size: 54px;
 	float: center;
 }
-section p{
+main p{
 	color: white;
 	font-size: 34px;
 }
@@ -100,49 +69,37 @@ section p{
   padding: 0;
 }
 
-.topnav a {
-  float: left;
-  display: block;
-  color: black;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.topnav a.active {
-  background-color: deepskyblue;
-  color: white;
-}
-
-.topnav .icon {
-  display: none;
-}
- .topnav a:not(:first-child) {float: right;}
-
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
+.container {
+  width: 60%;
+  margin-right: 0px;
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
   }
-}
+  h3{
+   text-align: center;
+  }
 
-@media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
+  input[type=text],[type=email], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+    }
+ .social{
+  width: 38%; 
+  height: 480px;
+  padding-top: 23px;
+  padding-right: 34px;
+
+ }   
+ .social label{
+  padding-top: 54px;
+}
+.social label a{
+  font-size: 22px;
 }
