--- a/style.css
+++ b/style.css
@@ -80,8 +80,9 @@ main p{
    text-align: center;
   }
 
-  input[type=text],[type=email], select, textarea {
+  input[type=text],[type=email],[type=file], select, textarea {
     width: 100%;
+    background-color: white;
     padding: 12px;
     border: 1px solid #ccc;
     border-radius: 4px;
