--- a/style.css
+++ b/style.css
@@ -16,11 +16,11 @@ background-color: #4e71d3;
 
 
 nav{
+position: relative;
 text-align:right;
 background-color:skyblue;
 height:380px;
 padding:0;
-position: relative;
 }
 li a{
 color:black;
@@ -37,12 +37,13 @@ span{
 
 
 main{
-      background-image: url(mac.jpg);
+      position: absolute;
+      background-image: url(https://i.ytimg.com/vi/7GKZqLmL4PI/maxresdefault.jpg);
       background-size: cover;
-            margin-top: 0em;
-            padding-top: 0em;
-            width: 100%;
-            height: 700px;
+      top: 55px; 
+      width: 100%;
+      height: 700px;
+      
 
 
 		}
@@ -50,7 +51,6 @@ main h1{
 	padding-top: 173px;
 	color: white;
 	font-size: 54px;
-	float: center;
 }
 main p{
 	color: white;
