--- a/style.css
+++ b/style.css
@@ -13,15 +13,6 @@ cursor: pointer;
 input[type=submit]:hover {
 background-color: #4e71d3;
 }
-
-
-nav{
-position: relative;
-text-align:right;
-background-color:skyblue;
-height:380px;
-padding:0;
-}
 li a{
 color:black;
 text-decoration: none;
@@ -34,13 +25,10 @@ span{
     padding-left: 644px;
 }
   
-
-
 main{
-      position: absolute;
+      top: 0%;
       background-image: url(https://i.ytimg.com/vi/7GKZqLmL4PI/maxresdefault.jpg);
       background-size: cover;
-      top: 55px; 
       width: 100%;
       height: 700px;
       
@@ -92,11 +80,17 @@ main p{
     resize: vertical;
     }
  .social{
-  width: 38%; 
+  width: 35%; 
   height: 480px;
   padding-top: 23px;
-  padding-right: 34px;
-
+  padding-right: 0px;
+ } 
+ .aboutmephoto{
+  width: 35%; 
+  height: 480px;
+  padding-top: 23px;
+  padding-right: 0px;
+  background-color: beige;
  }   
  .social label{
   padding-top: 54px;
@@ -104,3 +98,28 @@ main p{
 .social label a{
   font-size: 22px;
 }
+.aboutme{
+  width: 65%; 
+  height: 480px;
+  padding: 3px;
+  background-color:rgb(255, 230, 255);
+
+ }
+ .containers {
+  width: 95%;
+  background-color: #ddd;
+  margin-left: 3%;
+}
+
+.skills {
+  text-align: right;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: white;
+}
+
+.html {width: 90%; background-color: #4CAF50;}
+.css {width: 80%; background-color: #2196F3;}
+.js {width: 65%; background-color: #f44336;}
+.php {width: 60%; background-color: #808080;}
+* {box-sizing: border-box}
