creating Admin pannel

--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ main p{
 
 .html {width: 90%; background-color: #4CAF50;}
 .css {width: 80%; background-color: #2196F3;}
-.js {width: 65%; background-color: #f44336;}
+.js {width: 65%; background-color: #644948;}
 .php {width: 60%; background-color: #808080;}
+.cpp {width: 52%; background-color: #72a74f;}
 * {box-sizing: border-box}
